syntax = "proto3";
package attestation_container;

// attestation_container service definition.
service AttestationContainer {
  // Fetches and returns attestation report, platform certificates, and UVM endorsements (UVM reference info).
  // In future it returns Certificate Revocation List (CRL) as well.
  rpc FetchAttestation (FetchAttestationRequest) returns (FetchAttestationReply) {}
}

message FetchAttestationRequest {
  // Defined in Table 21 of SEV-SNP firmware ABI specification
  // https://www.amd.com/en/support/tech-docs/sev-secure-nested-paging-firmware-abi-specification
  bytes report_data = 1;
}

message FetchAttestationReply {
  // ATTESTATION_REPORT Structure defined in Table 21 of SEV-SNP firmware ABI specification
  bytes attestation = 1;
  // Concatenation of VCEK, ASK, and ARK certificates (PEM format, in that order).
  // https://www.amd.com/en/support/tech-docs/versioned-chip-endorsement-key-vcek-certificate-and-kds-interface-specification
  bytes platform_certificates = 2;
  // UVM Endorsement (UVM reference info)
	// This is a base64 encoded COSE_Sign1 envelope whose issuer and feed should match Confidential ACIs signing identity
	// The payload is a json file containing two fields:
	// - x-ms-sevsnpvm-guestsvn
	//   This is a version number of the Utility VM that the container is running on.
	// - x-ms-sevsnpvm-measurement
	//   This is the SHA256 hash of the Utility VM's measurement. It should match the MEASUREMENT field in the attestation report
  bytes uvm_endorsements = 3;
}
